--- a/css/myCSS.css
+++ b/css/myCSS.css
@@ -12,4 +12,11 @@
     align-items: center;
     justify-content: center;
 }
-
+.floating-buttons {
+    position: fixed;
+    width: 100%;
+    bottom: 100px; /* adjust this value if your footer height changes */
+    z-index: 999;
+    padding: 0 15px;
+    display: none;
+}
