first container update on all html + +btn

--- a/css/myCSS.css
+++ b/css/myCSS.css
@@ -23,5 +23,5 @@
     width: max-content;
     background: #fff;
     border-radius: 12px;
-    box-shadow: none; /* Remove the shadow */
+    box-shadow: none;
 }
