--- a/css/myCSS.css
+++ b/css/myCSS.css
@@ -5,12 +5,17 @@
     font-size: 0.8rem;
 }
 .plus-btn {
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 50px;
     height: 50px;
     font-size: 0.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 9999;
 }
 .floating-buttons {
     position: fixed;
@@ -18,10 +23,16 @@
     transform: translateX(-50%);
     bottom: 100px;
     z-index: 999;
-    padding: 0 15px;
+    padding: 0;
     display: none;
     width: max-content;
-    background: #fff;
+    background: transparent;
     border-radius: 12px;
     box-shadow: none;
+}
+.footer-row {
+    gap: 5%;
+}
+.floating-buttons button {
+    width: 200px;
 }
